--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -10,6 +10,7 @@ const urlPageTitles = new Map([
   ["/temoignages", "Témoignages"],
   ["/mentions-legles", "Mentions légales"],
   ["/plan-du-site", "Plan du site"],
+  ["/glossaire-ux-design", "Glossaire de l’UX design\n"],
 ]);
 ---
 
