--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,7 +48,7 @@ const { class: cssClasses } = Astro.props;
       <ul class="flex flex-col gap-4">
         <li>
           <CallToAction
-            href="/glossaire-ux"
+            href="/glossaire-ux-design"
             type="secondary"
             variant="transparent"
           >
