--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -19,7 +19,7 @@ import NavItems from "./NavItems.astro";
             <NavItems
               title="Références"
               items={[
-                { title: "Nos projets", pathname: "/projets" },
+                { title: "Projets", pathname: "/projets" },
                 { title: "Témoignages", pathname: "/temoignages" },
               ]}
             />
@@ -28,7 +28,7 @@ import NavItems from "./NavItems.astro";
             <NavItems
               title="Team UX"
               items={[
-                { title: "Nos deux profils", pathname: "/nos-deux-profils" },
+                { title: "Nos 2 profils", pathname: "/nos-deux-profils" },
                 { title: "Notre manifeste", pathname: "/notre-manifeste" },
               ]}
             />
