refactor: move pages components intp pages/

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -1,11 +1,11 @@
 ---
-import Brush from "../../@common/Brush.astro";
-import Image from "../../@common/Image.astro";
-import Grid from "../../@common/Grid.astro";
-import Icon from "../../@common/Icon.astro";
-import CallToAction from "../../@common/CallToAction.astro";
-import DuoDeChoc from "../../../components/DuoDeChoc.astro";
-import data from "../../../data/homepage/derriere-team-ux.yaml";
+import Brush from "../../../@common/Brush.astro";
+import Image from "../../../@common/Image.astro";
+import Grid from "../../../@common/Grid.astro";
+import Icon from "../../../@common/Icon.astro";
+import CallToAction from "../../../@common/CallToAction.astro";
+import DuoDeChoc from "../../../../components/DuoDeChoc.astro";
+import data from "../../../../data/homepage/derriere-team-ux.yaml";
 
 const { block1, block2 } = data;
 ---
