--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../../@common/Grid.astro";
-import Brush from "../../@common/Brush.astro";
+import Grid from "../../../@common/Grid.astro";
+import Brush from "../../../@common/Brush.astro";
+import data from "../../../../data/homepage/expertises.yaml";
 import Expertise from "./Expertise.astro";
-import data from "../../../data/homepage/expertises.yaml";
 ---
 
 <section class="relative container mb-[140px]">
