--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../@common/Grid.astro";
-import CallToAction from "../@common/CallToAction.astro";
-import BackgroundForm1 from "../BackgroundForm1.astro";
-import DuoDeChoc from "../DuoDeChoc.astro";
+import Grid from "../../@common/Grid.astro";
+import CallToAction from "../../@common/CallToAction.astro";
+import BackgroundForm1 from "../../BackgroundForm1.astro";
+import DuoDeChoc from "../../DuoDeChoc.astro";
 ---
 
 <section class="overflow-hidden mt-[129px]">
