--- a/src/components/pages/nos-deux-profils/Profile.astro
+++ b/src/components/pages/nos-deux-profils/Profile.astro
@@ -1,7 +1,6 @@
 ---
-import Yuna from "../images/Yuna.astro";
-import TagSkill from "../@common/TagSkill.astro";
-import CallToAction from "../@common/CallToAction.astro";
+import TagSkill from "../../@common/TagSkill.astro";
+import CallToAction from "../../@common/CallToAction.astro";
 
 interface Props {
   profile: {
