--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -1,6 +1,6 @@
 ---
-import Grid from "../@common/Grid.astro";
-import CallToAction from "../@common/CallToAction.astro";
+import Grid from "../../@common/Grid.astro";
+import CallToAction from "../../@common/CallToAction.astro";
 ---
 
 <section class="container mt-20">
