--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -1,10 +1,10 @@
 ---
-import CallToAction from "../../../../components/@common/CallToAction.astro";
+import CallToAction from "../../../../../components/@common/CallToAction.astro";
 import Testimonial, {
   type Testimonial,
-} from "../../../../components/Testimonial.astro";
-import Icon from "../../../../components/@common/Icon.astro";
-import TagSkill from "../../../../components/@common/TagSkill.astro";
+} from "../../../../../components/Testimonial.astro";
+import Icon from "../../../../../components/@common/Icon.astro";
+import TagSkill from "../../../../../components/@common/TagSkill.astro";
 
 interface Props {
   project: {
