--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -1,5 +1,5 @@
 ---
-import TagSkill from "../../../components/@common/TagSkill.astro";
+import TagSkill from "../../../../components/@common/TagSkill.astro";
 interface Props {
   projects: {
     name: string;
