--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -1,10 +1,10 @@
 ---
-import data from "../../../data/projects/all-projects.yaml";
+import data from "../../../../data/projets/all-projects.yaml";
+import Brush from "../../../../components/@common/Brush.astro";
+import Grid from "../../../../components/@common/Grid.astro";
+import CallToAction from "../../../@common/CallToAction.astro";
 import LargeProject from "./LargeProject/index.astro";
-import Brush from "../../../components/@common/Brush.astro";
 import SmallProject from "./SmallProject.astro";
-import Grid from "../../../components/@common/Grid.astro";
-import CallToAction from "../../@common/CallToAction.astro";
 ---
 
 <section class="container">
