--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -2,12 +2,12 @@
 import Contact from "../../components/Contact.astro";
 import Footer from "../../components/Footer.astro";
 import Breadcrumb from "../../components/Breadcrumb.astro";
-import Content from "../../components/plan-du-site/Content.astro";
-import Hero from "../../components/plan-du-site/Hero.astro";
+import Content from "../../components/pages/plan-du-site/Content.astro";
+import Hero from "../../components/pages/plan-du-site/Hero.astro";
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Projets">
+<Layout title="Plan du site">
   <Breadcrumb />
   <Hero />
   <Content />
