--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -1,9 +1,9 @@
 ---
-import Grid from "../../@common/Grid.astro";
-import Brush from "../../@common/Brush.astro";
-import CallToAction from "../../@common/CallToAction.astro";
-import data from "../../../data/homepage/projects-teasing.yaml";
-import BackgroundForm1 from "../../BackgroundForm1.astro";
+import Grid from "../../../@common/Grid.astro";
+import Brush from "../../../@common/Brush.astro";
+import CallToAction from "../../../@common/CallToAction.astro";
+import data from "../../../../data/homepage/projects-teasing.yaml";
+import BackgroundForm1 from "../../../BackgroundForm1.astro";
 import Teasing from "./Teasing.astro";
 
 const {
