--- a/src/components/pages/homepage/Testimonials/index.astro
+++ b/src/components/pages/homepage/Testimonials/index.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../../@common/Grid.astro";
-import data from "../../../data/homepage/temoignages.yaml";
-import CallToAction from "../../@common/CallToAction.astro";
-import Testimonial from "../../Testimonial.astro";
+import Grid from "../../../@common/Grid.astro";
+import data from "../../../../data/homepage/temoignages.yaml";
+import CallToAction from "../../../@common/CallToAction.astro";
+import Testimonial from "../../../Testimonial.astro";
 ---
 
 <section class="container">
