--- a/src/components/pages/nos-deux-profils/Hero.astro
+++ b/src/components/pages/nos-deux-profils/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import CommonPageHero from "../CommonPageHero.astro";
+import CommonPageHero from "../../CommonPageHero.astro";
 ---
 
 <CommonPageHero
