--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -1,10 +1,10 @@
 ---
-import Icon from "../@common/Icon.astro";
-import data from "../../data/nos-deux-profils/match.yaml";
-import Grid from "../@common/Grid.astro";
-import CallToAction from "../@common/CallToAction.astro";
-import Brush from "../@common/Brush.astro";
-import TeamUXStamp from "../TeamUXStamp.astro";
+import data from "../../../data/nos-deux-profils/match.yaml";
+import Icon from "../../@common/Icon.astro";
+import Grid from "../../@common/Grid.astro";
+import CallToAction from "../../@common/CallToAction.astro";
+import Brush from "../../@common/Brush.astro";
+import TeamUXStamp from "../../TeamUXStamp.astro";
 ---
 
 <section>
