--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -1,11 +1,11 @@
 ---
-import Grid from "../@common/Grid.astro";
-import Profile from "../../components/nos-deux-profils/Profile.astro";
-import dataYuna from "../../data/nos-deux-profils/yuna.yaml";
-import dataDaniela from "../../data/nos-deux-profils/daniela.yaml";
-import Yuna from "../images/Yuna.astro";
-import Daniela from "../images/Daniela.astro";
-import Brush from "../@common/Brush.astro";
+import dataYuna from "../../../data/nos-deux-profils/yuna.yaml";
+import dataDaniela from "../../../data/nos-deux-profils/daniela.yaml";
+import Grid from "../../@common/Grid.astro";
+import Brush from "../../@common/Brush.astro";
+import Yuna from "../../images/Yuna.astro";
+import Daniela from "../../images/Daniela.astro";
+import Profile from "./Profile.astro";
 ---
 
 <section class="container mb-[140px]">
