--- a/src/components/pages/temoignages/Hero.astro
+++ b/src/components/pages/temoignages/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import CommonPageHero from "../../components/CommonPageHero.astro";
+import CommonPageHero from "../../../components/CommonPageHero.astro";
 ---
 
 <CommonPageHero
