--- a/src/components/pages/temoignages/Testimonials.astro
+++ b/src/components/pages/temoignages/Testimonials.astro
@@ -1,6 +1,6 @@
 ---
-import data from "../../data/temoignages/all-testimonials.yaml";
-import Testimonial from "../Testimonial.astro";
+import data from "../../../data/temoignages/all-testimonials.yaml";
+import Testimonial from "../../Testimonial.astro";
 ---
 
 <section class="container">
