--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -3,12 +3,12 @@ import Layout from "../../layouts/Layout.astro";
 import Footer from "../../components/Footer.astro";
 import Breadcrumb from "../../components/Breadcrumb.astro";
 import Contact from "../../components/Contact.astro";
-import Hero from "../../components/nos-deux-profils/Hero.astro";
-import Profiles from "../../components/nos-deux-profils/Profiles.astro";
-import ItsAMatch from "../../components/nos-deux-profils/ItsAMatch.astro";
+import Hero from "../../components/pages/nos-deux-profils/Hero.astro";
+import Profiles from "../../components/pages/nos-deux-profils/Profiles.astro";
+import ItsAMatch from "../../components/pages/nos-deux-profils/ItsAMatch.astro";
 ---
 
-<Layout title="Nos 2 profiles">
+<Layout title="Nos 2 profils">
   <Breadcrumb />
   <Hero />
   <Profiles />
