--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -14,8 +14,8 @@ export interface Props {
     | "open_in_new"
     | "quote"
     | "visibility";
-  width: `${number}px`;
-  height: `${number}px`;
+  width: number;
+  height: number;
 }
 
 const { name, width, height } = Astro.props;
