--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -9,7 +9,7 @@ const htmlAttributes =
 ---
 
 <HTMLTag {...htmlAttributes} class="logo">
-  <Icon width="56px" height="40px" name="logo" />
+  <Icon width={56} height={40} name="logo" />
   <span>Team UX</span>
 </HTMLTag>
 
