--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -15,7 +15,7 @@ const { title, items } = Astro.props;
 
 <NavItem>
   {title}
-  <Icon name="arrow_drop_down" width="20px" height="20px" />
+  <Icon name="arrow_drop_down" width={20} height={20} />
 
   <div class="submenu-container" slot="submenu">
     <ul>
