--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -66,7 +66,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
       </ul>
       <div class="flex gap-2.5">
         <span role="presentation">
-          <Icon name="photo_prints" width="24px" height="24px" /></span
+          <Icon name="photo_prints" width={24} height={24} /></span
         >
         <p class="text-neutral1 text-body-small">
           Dans une démarche d’éco-responsabilité, nous vous proposons de
