refactor: move page folder

--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -1,6 +1,6 @@
 ---
-import data from "../../data/glossaire-design-ux/data.yaml";
-import Grid from "../@common/Grid.astro";
+import data from "../../../data/glossaire-design-ux/data.yaml";
+import Grid from "../../@common/Grid.astro";
 import Letter from "./Letter.astro";
 
 const totalDefinitions = data.length;
