--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -13,7 +13,8 @@ export interface Props {
     | "logo"
     | "open_in_new"
     | "quote"
-    | "visibility";
+    | "visibility"
+    | "chevron_right_breadcrumb";
   width: number;
   height: number;
 }
