--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,7 +5,7 @@ import CallToAction from "./@common/CallToAction.astro";
 import BackgroundForm1 from "./BackgroundForm1.astro";
 
 interface Props {
-  class: string;
+  class?: string;
   showBackgroundForm?: boolean;
 }
 
