--- a/src/components/pages/mentions-legales/Hero.astro
+++ b/src/components/pages/mentions-legales/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import CommonPageHero from "../CommonPageHero.astro";
+import CommonPageHero from "../../CommonPageHero.astro";
 ---
 
 <CommonPageHero title="Mentions légales" showBackgroundForm={false} />
