--- a/src/components/@common/Brush.astro
+++ b/src/components/@common/Brush.astro
@@ -11,9 +11,9 @@ const { id, ...props } = Astro.props;
 <Image
   role="presentation"
   srcSet={[
-    `images/brush${id}.png`,
-    `images/brush${id}.avif`,
-    `images/brush${id}.webp`,
+    `/images/brush${id}.png`,
+    `/images/brush${id}.avif`,
+    `/images/brush${id}.webp`,
   ]}
   {...props}
 />
