add alt to logos

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -76,29 +76,57 @@ const { block1, block2 } = data;
                   srcSet={["images/access42.png"]}
                   width="80"
                   height="58"
+                  alt="Logo du cabinet de conseil français expert en accessibilité numérique Access42"
                 />
               </li>
               <li>
-                <Image srcSet={["images/IDF.png"]} width="170" height="56" />
+                <Image
+                  srcSet={["images/IDF.png"]}
+                  alt=""
+                  width="170"
+                  height="56"
+                  alt="Logo du site de formation Interaction Design Foundation"
+                />
               </li>
               <li>
-                <Image srcSet={["images/w3c.png"]} width="90" height="46" />
+                <Image
+                  srcSet={["images/w3c.png"]}
+                  width="90"
+                  height="46"
+                  alt="Logo du W3C"
+                />
               </li>
               <li>
                 <Image
                   srcSet={["images/opquast.png"]}
                   width="140"
                   height="36"
+                  alt="Logo de l'organisme de certification Opquast"
                 />
               </li>
               <li>
-                <Image srcSet={["images/uxer.png"]} width="46" height="47" />
+                <Image
+                  srcSet={["images/uxer.png"]}
+                  width="46"
+                  height="47"
+                  alt="Logo de l'agence digitale UXER"
+                />
               </li>
               <li>
-                <Image srcSet={["images/shifta.png"]} width="106" height="40" />
+                <Image
+                  srcSet={["images/shifta.png"]}
+                  width="106"
+                  height="40"
+                  alt="Logo de l'université SHIFTA"
+                />
               </li>
               <li>
-                <Image srcSet={["images/INR.png"]} width="120" height="44" />
+                <Image
+                  srcSet={["images/INR.png"]}
+                  width="120"
+                  alt="Logo de l'institut du numérique responsable"
+                  height="44"
+                />
               </li>
             </ul>
           </div>
@@ -114,6 +142,7 @@ const { block1, block2 } = data;
                   srcSet={["images/diseno-etico.png"]}
                   width="90"
                   height="49"
+                  alt="Logo de l'association Desino Etico"
                 />
               </li>
               <li>
@@ -121,6 +150,7 @@ const { block1, block2 } = data;
                   srcSet={["images/designers-ethiques.png"]}
                   width="105"
                   height="49"
+                  alt="Logo de l'association Designers Éthiques"
                 />
               </li>
             </ul>
